fix spacing advantages

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@
   display: block;
   position: relative;
 }
-.container__advantages .container__differences-question {
+.container__advantages .container__differences_question {
   text-align: center;
   margin-bottom: 2rem;
 }
@@ -188,9 +188,6 @@
 }
 .container__advantages p {
   color: #9095a7;
-}
-.container__advantages:first-of-type, .container__advantages :nth-of-type(2) {
-  margin-bottom: 2rem;
 }
 .container__advantages .container__list_of_advantages {
   position: relative;
@@ -234,6 +231,9 @@
   border-bottom-left-radius: 20px;
   z-index: -1;
   background-color: #ffefeb;
+}
+.container__advantages .container__list_of_advantages:first-of-type, .container__advantages .container__list_of_advantages :nth-of-type(2) {
+  margin-bottom: 1rem;
 }
 
 /* REVIEWS */
@@ -387,9 +387,8 @@
     display: flex;
     justify-content: space-between;
   }
-  .container__advantages .container__differences-question {
+  .container__advantages .container__differences_question {
     text-align: left;
-    margin-bottom: 2rem;
   }
   .container__advantages h2 {
     color: #242d52;
@@ -447,11 +446,6 @@
   .container__reviews .container__cards {
     flex-direction: row;
   }
-  .container__reviews h2 {
-    text-align: center;
-    color: #242d52;
-    margin-bottom: 5rem;
-  }
   .container__reviews .container__avatar {
     position: absolute;
     top: -3rem;
@@ -484,9 +478,6 @@
   }
   .container__reviews .text__review {
     color: #9095a7;
-  }
-  .container__reviews .container__differences-question {
-    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1024px) {
